--- a/index.css
+++ b/index.css
@@ -13,11 +13,14 @@
 .memo_content {
     overflow: hidden;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     text-align: center;
     align-content: center;
     position: relative;
     background-color: aliceblue;
+
+    display: grid;
+    grid-template-columns: 1fr 350px;
 }
 
 .image_wrapper {
@@ -45,23 +48,43 @@ input[type=file] {
     min-width: 100px;
     min-height: 25px;
     border: 4px solid blue;
-  }
-  
-  .memo:active {
-    border-width: 4px;
-    border-color: deeppink;
-    outline: none;
-  }
-  
-  .memo:focus {
-    border-width: 4px;
-    border-color: deeppink;
-    outline: none;
+    &:active {
+      border-width: 4px;
+      border-color: deeppink;
+      outline: none;
+    }
+    
+    &:focus {
+      border-width: 4px;
+      border-color: deeppink;
+      outline: none;
+    }
+    
   }
   
   .focus {
-    border-width: 4px;
-    border-color: red;
-    outline: none;
+    /* border-width: 4px; */
+    border-color: red !important;
+    outline: none !important;
   }
   
+  .numbering {
+    position: absolute;
+    top: 0;
+    left: 0;
+    position-anchor: "--" + attr(data-anchor) + "-canvas";
+    min-width: 25px;
+    min-height: 25px;
+    border: 2px solid blue;
+    border-radius: 50%;
+    cursor: pointer;
+    &:active {
+      border-color: deeppink;
+      outline: none;
+    }
+    
+    &:focus {
+      border-color: deeppink;
+      outline: none;
+    }
+  }
