svg 태그 추가 및 텍스트 박스, 라인 그리기 추가

--- a/index.css
+++ b/index.css
@@ -65,3 +65,10 @@ input[type=file] {
     outline: none;
   }
   
+  .image_paint {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: anchor-size(attr(target-anchor));
+    height: anchor-size(attr(target-anchor));
+  }
