--- a/index.css
+++ b/index.css
@@ -1,75 +1,81 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .memo_content {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    align-content: center;
-    position: relative;
-    background-color: aliceblue;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  align-content: center;
+  position: relative;
+  background-color: aliceblue;
 }
 
 .image_wrapper {
-    margin: 0 auto;
-    overflow: auto;
-    position: relative;
-    display: inline-block;
-    min-width: 0%;
-    max-width: 100%;
-    min-height: 0%;
-    max-height: 100%;
+  margin: 0 auto;
+  overflow: auto;
+  position: relative;
+  display: inline-block;
+  min-width: 0%;
+  max-width: 100%;
+  min-height: 0%;
+  max-height: 100%;
 }
 
-input[type=file] {    
-    height: auto;
-    display: block;
+input[type="file"] {
+  height: auto;
+  display: block;
 }
 
 .memo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 15px;
-    position-anchor: "--" + attr(data-anchor) + "-canvas";
-    min-width: 100px;
-    min-height: 25px;
-    border: 4px solid blue;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 15px;
+  position-anchor: "--" + attr(data-anchor) + "-canvas";
+  min-width: 100px;
+  min-height: 25px;
+  border: 4px solid blue;
   transform: translate(-50%, -50%);
-  }
-  
-  .memo:active {
-    border-width: 4px;
-    border-color: deeppink;
+  cursor: all-scroll;
+
+  & > div {
+    cursor: default;
     outline: none;
   }
-  
-  .memo:focus {
-    border-width: 4px;
-    border-color: deeppink;
-    outline: none;
-  }
-  
-  .focus {
-    border-width: 4px;
-    border-color: red;
-    outline: none;
-  }
-  
-  .image_paint {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: anchor-size(attr(target-anchor));
-    height: anchor-size(attr(target-anchor));
-  }
+}
+
+.memo:active {
+  border-width: 4px;
+  border-color: deeppink;
+  outline: none;
+}
+
+.memo:focus {
+  border-width: 4px;
+  border-color: deeppink;
+  outline: none;
+}
+
+.focus {
+  border-width: 4px;
+  border-color: red;
+  outline: none;
+}
+
+.image_paint {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: anchor-size(attr(target-anchor));
+  height: anchor-size(attr(target-anchor));
+}
