timeline 및 자잘한 버그 수정

--- a/index.css
+++ b/index.css
@@ -80,3 +80,7 @@ input[type="file"] {
   width: anchor-size(attr(target-anchor));
   height: anchor-size(attr(target-anchor));
 }
+
+path {
+  cursor: pointer;
+}
