--- a/index.css
+++ b/index.css
@@ -47,6 +47,8 @@ input[type="file"] {
   border: 4px solid blue;
   /* transform: translate(-50%, -50%); */
   cursor: all-scroll;
+  resize: both;
+  overflow: auto;
 
   & > div {
     cursor: text;
@@ -68,9 +70,9 @@ input[type="file"] {
 
 .focus {
   border-width: 4px;
-  border-color: red;
+  border-color: red !important;
   outline: none;
-  stroke: red;
+  stroke: red !important;
 }
 
 .image_paint {
