--- a/index.css
+++ b/index.css
@@ -49,6 +49,7 @@ input[type="file"] {
   cursor: all-scroll;
   resize: both;
   overflow: auto;
+  font-size: 14px;
 
   & > div {
     cursor: text;
@@ -56,6 +57,7 @@ input[type="file"] {
     width: 100%;
     height: 100%;
     align-content: center;
+    text-align: center;
   }
 }
 
@@ -88,4 +90,9 @@ input[type="file"] {
 
 path {
   cursor: pointer;
+}
+
+canvas {
+  /* width: 0;
+  height: 0; */
 }
